# sail_pal

./: .env.example  .gitignore  README.md  alembic.ini
.github/workflows/: release.yml
backend/: config.py  entrypoint.py  main.py  pyinstaller.spec  requirements.txt
backend/ai/: google_client.py  image_parser.py  ollama_client.py  prompt_templates.py  rag_engine.py
backend/db/: database.py  models.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 13df8f5cdd90_initial.py
backend/routers/: ai.py  crew.py  health.py  maintenance.py  setup.py  sync.py  vessel.py
backend/schemas/: pydantic_models.py
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/crew/: page.tsx
frontend/src/app/crew/[id]/: page.tsx
frontend/src/app/crew/detail/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/health/new/: page.tsx
frontend/src/app/maintenance/: page.tsx
frontend/src/app/maintenance/new/: page.tsx
frontend/src/app/vessel/: page.tsx
frontend/src/app/vessel/[id]/: page.tsx
frontend/src/app/vessel/detail/: page.tsx
frontend/src/components/setup/: SetupGate.tsx  SetupWizard.tsx
frontend/src/components/ui/: CloudBanner.tsx  OfflineBanner.tsx  QueryProvider.tsx  SeverityBadge.tsx  Sidebar.tsx  Skeleton.tsx
frontend/src/lib/: api.ts  setup.ts  types.ts
scripts/: generate_placeholder_icon.py  seed.py  start.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
